Closed
Bug 1333250
Opened 9 years ago
Closed 9 years ago
Disable Windows a11y+e10s in 53
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla53
People
(Reporter: bugzilla, Assigned: bugzilla)
References
Details
Attachments
(3 files)
|
3.88 KB,
patch
|
bugzilla
:
review+
lizzard
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
|
3.31 KB,
patch
|
bugzilla
:
review+
lizzard
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
|
1.16 KB,
patch
|
bugzilla
:
review+
lizzard
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #1325690 +++
Let's disable a11y+e10s by default in Aurora 53. We'll focus on landing stability patches in 54 while uplifting all of them to 53, thus maintaining the possibility of shipping in 53.
Updated•9 years ago
|
status-firefox53:
--- → affected
tracking-firefox53:
--- → +
| Assignee | ||
Comment 1•9 years ago
|
||
Approval Request Comment
[Feature/Bug causing the regression]: Windows a11y on e10s
[User impact if declined]: Stability
[Is this code covered by automated tests?]: Yes
[Has the fix been verified in Nightly?]: No, direct landing to Aurora
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: All patches in this bug
[Is the change risky?]: No
[Why is the change risky/not risky?]: Same change as bug 1325690
[String changes made/needed]: None
Assignee: nobody → aklotz
Status: NEW → ASSIGNED
Attachment #8830022 -
Flags: review+
Attachment #8830022 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Comment 2•9 years ago
|
||
Attachment #8830023 -
Flags: review+
| Assignee | ||
Comment 3•9 years ago
|
||
Attachment #8830024 -
Flags: review+
| Assignee | ||
Comment 4•9 years ago
|
||
(Bug number needs updating in those patches, sorry)
Comment 5•9 years ago
|
||
Comment on attachment 8830022 [details] [diff] [review]
Restore Windows a11y checks for e10s
Yes, we should uplift this to aurora. Thanks Aaron.
Attachment #8830022 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 6•9 years ago
|
||
Comment on attachment 8830023 [details] [diff] [review]
Modify ContentParent to only initialize a11y on Windows when e10s is force-enabled
[Triage Comment]
Attachment #8830023 -
Flags: approval-mozilla-aurora+
Comment 7•9 years ago
|
||
Comment on attachment 8830024 [details] [diff] [review]
Restore Windows check to "a11y disables e10s" prompt
[Triage Comment]
Attachment #8830024 -
Flags: approval-mozilla-aurora+
Comment 8•9 years ago
|
||
| bugherder uplift | ||
Updated•9 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in
before you can comment on or make changes to this bug.
Description
•