Bug 1333250 - Modify ContentParent to only initialize a11y on Windows when e10s is force-enabled. r=jimm, a=lizzard

MozReview-Commit-ID: BEB4apWfJMj